--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
         font-family: 'Roboto Condensed', sans-serif;
         font-size: 20px;
+        color: "#00f6ff";
       }
   .center {
   margin: auto;
