--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
         font-family: 'Roboto Condensed', sans-serif;
         font-size: 20px;
-        color: "#00f6ff";
+        color: #67e4e5;
       }
   .center {
   margin: auto;
