--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,9 @@ body {
   width: 50%;
   padding: 50px;
 }
+
+.embedly-card{
+       
+        font-family: 'Roboto Condensed', sans-serif;
+        color: #67e4e5;
+        }
