--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,12 @@ body {
         color: #67e4e5;
       }
   .center {
+  position : absolute;
+  bottom : -115px;
+  left : 200px;
   margin: auto;
   width: 50%;
   padding: 50px;
-  vertical-align : text-bottom;
+  
 }
 
