--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
         color: #67e4e5;
       }
   .center {
+  position : absolute;
+  left : 200px;
+  bottom : 140px;        
   margin: auto;
   width: 50%;
   padding: 50px;
