--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,8 @@ body {
         color: #67e4e5;
       }
   .center {
-  position : absolute;
-  left : 200px;
-  bottom : 140px;        
-  margin: auto;
+  margin: 0px auto;
   width: 50%;
   padding: 50px;
-  
 }
 
