--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,35 @@
-body {
-        font-family: 'Roboto Condensed', sans-serif;
-        font-size: 20px;
-        color: #67e4e5;
-      }
-  .center {
-  margin: 0px auto;
-  width: 50%;
-  padding: 50px;
+html, body {
+	background-color: #000000;
+	color: #67E4E5;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 20px;
+	height: 100%;
+	margin: 0px;
+	width: 100%;
+}
+
+a, a:visited {color: #67E4E5;}
+
+.center {
+	display: table;
+	height: 100%;
+	width: 100%;
+}
+
+.center-wrap {
+	display: table-cell;
+	height: 100%;
+	text-align: center;
+	vertical-align: middle;
+	width: 100%;
+}
+
+.center-content {
+	display: block;
+	margin: 0px auto;
+	padding: 50px;
+	text-align: left;
+	width: 50%;
 }
 
 
