--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ a, a:visited {color: #67E4E5;}
 	margin: 0px auto;
 	padding: 50px;
 	text-align: left;
-	width: max-width;
+	max-width: 780px;
 }
 
 
