--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 html, body {
 	background-color: #000000;
 	color: #67E4E5;
