--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ ul.social-icons {
     height: 100px;
 }
 .social-icons a {
-    color: #fff;
+    color: #67E4E5;
     text-decoration: none;
 }
 .fa-facebook {
