--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,10 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: #322f30;
+    background-color: #000000;
 }
 .fa-facebook:hover {
-    background-color: #3d5b99;
+    background-color: #322f30;
 }
 .fa-twitter {
     padding:10px 12px;
@@ -75,10 +75,10 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: #322f30;
+    background-color: #000000;
 }
 .fa-twitter:hover {
-    background-color: #00aced;
+    background-color: #322f30;
 }
 .fa-rss {
     padding:10px 14px;
@@ -87,10 +87,10 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: #322f30;
+    background-color: #000000;
 }
 .fa-rss:hover {
-    background-color: #eb8231;
+    background-color: #322f30;
 }
 .fa-youtube {
     padding:10px 14px;
@@ -99,10 +99,10 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: #322f30;
+    background-color: #000000;
 }
 .fa-youtube:hover {
-    background-color: #e64a41;
+    background-color: #322f30;
 }
 .fa-linkedin {
     padding:10px 14px;
@@ -111,10 +111,10 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: #322f30;
+    background-color: #000000;
 }
 .fa-linkedin:hover {
-    background-color: #0073a4;
+    background-color: #322f30;
 }
 .fa-google-plus {
     padding:10px 9px;
@@ -123,10 +123,10 @@ ul.social-icons {
     -moz-transition:.5s;
     -webkit-transition:.5s;
     transition: .5s;
-    background-color: #322f30;
+    background-color: #000000;
 }
 .fa-google-plus:hover {
-    background-color: #e25714;
+    background-color: #322f30;
 }
 
 
